--- a/dashBoard/booking.html
+++ b/dashBoard/booking.html
@@ -25,10 +25,10 @@
 
   <div id="dashboardHeader"></div>
 <div class="container mobile-margin-r-none" >
-
-
+  
   <div id="dashboardHeader" style="z-index: 1; border-bottom:1px solid rgba(0, 0, 0, 0.085) ;"></div>
-
+  <br>
+  <h1 class="offer-header-font-1">Booking</h1>
   <br>
   <div class="container  max-w overflow" style="overflow-x: scroll;">
   <div class="d-flex gap-2">
