--- a/dashBoard/dashboardHeader.html
+++ b/dashBoard/dashboardHeader.html
@@ -40,11 +40,11 @@
      </ul> -->
             <!--menu items-->
             <div class="d-flex gap-3 align-items-center">
-              <a href="#" class="help-text mb-0 pb-1 link-not-active  " style="text-decoration: none; color: #444444;">Dashboard</a>
-              <a href="booking.html" class="help-text mb-0 pb-1 link-not-active link-active" style="color: #444444; text-decoration: none;">Bookings</a>
-              <a href="#" class="help-text mb-0 pb-1 link-not-active" style="text-decoration: none; color: #444444;">Calendar</a>
-              <a href="#" class="help-text mb-0 pb-1 link-not-active" style="text-decoration: none; color: #444444;">Listings</a>
-              <a href="#" class="help-text mb-0 pb-1 link-not-active" style="text-decoration: none; color: #444444;">Inbox</a>
+              <a href="dashboard.html" class="help-text mb-0 pb-1 link-not-active  link-active" style="text-decoration: none; color: #444444;">Dashboard</a>
+              <a href="booking.html" class="help-text mb-0 pb-1 link-not-active " style="color: #444444; text-decoration: none;">Bookings</a>
+              <a href="calender.html" class="help-text mb-0 pb-1 link-not-active" style="text-decoration: none; color: #444444;">Calendar</a>
+              <a href="listingdetails.html" class="help-text mb-0 pb-1 link-not-active" style="text-decoration: none; color: #444444;">Listings</a>
+              <a href="../message.html" class="help-text mb-0 pb-1 link-not-active" style="text-decoration: none; color: #444444;">Inbox</a>
               <div class="mobile-display-none" style="cursor: pointer;" onclick="toggleNotification()">
                 <svg class="not-selected" style="display: block;" xmlns="http://www.w3.org/2000/svg" width="18"
                   height="21" viewBox="0 0 18 21" fill="none">
