--- a/dashBoard/mobile/RulesAndPolicessubmobile/Houserules.html
+++ b/dashBoard/mobile/RulesAndPolicessubmobile/Houserules.html
@@ -84,8 +84,10 @@ background: var(--Gray-04, #FCFCFC);
 
   <section class=" mt-2">
     <div class="dashboard-mobile-header bb-hr">
-      <a href="../rulesAndPolicesMobile.html" class="">
-        <img src="../../../img/arrow_back.svg" alt="">
+      <a href="../rulesAndPolicesMobile.html" style="text-decoration: none; z-index: 1;">
+        <div>
+          <img src="../../../img/arrow_back.svg" alt="">
+        </div>
       </a>
       <p class="dashboard-font-25" style="color: #090A0A; padding: 12px;">House Rules</p>
     </div>
