--- a/dashBoard/mobile/RulesAndPolicessubmobile/Staytypes.html
+++ b/dashBoard/mobile/RulesAndPolicessubmobile/Staytypes.html
@@ -39,9 +39,11 @@ background: var(--White-White-100, #FFF);
 
     <section class=" mt-2">
       <div class="dashboard-mobile-header">
-        <a href="../rulesAndPolicesMobile.html" class="">
-          <img src="../../../img/arrow_back.svg" alt="">
-          </a>
+        <a href="../rulesAndPolicesMobile.html" style="text-decoration: none; z-index: 1;">
+          <div>
+            <img src="../../../img/arrow_back.svg" alt="">
+          </div>
+        </a>
         <p class="personalinfor-header-1" style="color: #090A0A; padding: 12px;">Stay types</p>
       </div>
 
