--- a/dashBoard/mobile/myListings.html
+++ b/dashBoard/mobile/myListings.html
@@ -78,9 +78,11 @@
 
   <section class="mb-5">
     <section class=" mt-2">
-      <div class="dashboard-mobile-header">
-        <a href="../myplacepage2.html" class="">
-          <img src="../../../img/arrow_back.svg" alt="">
+      <div class="dashboard-mobile-header" style="cursor: pointer;">
+        <a href="./myplace.html" class="" style="text-decoration: none; z-index: 1;">
+          <div>
+            <img src="../../../img/arrow_back.svg" alt="">
+          </div>
           </a>
         <p class="personalinfor-header-1" style="color: #090A0A; padding: 12px;">Listing name</p>
       </div>
@@ -98,7 +100,7 @@
           </div>
         </a>
 
-         <a style="text-decoration: none;" href="../booking.html">
+         <a href="" style="text-decoration: none;" >
           <div class="bb-hr py-2 px-3 d-flex justify-content-between">
             <div class="d-flex gap-2 align-items-center ">
               <img src="../../img/Calender 1.svg" alt="">
@@ -107,23 +109,25 @@
             <img class="right-arrow" src="../../img/arrow_forward.svg" alt="">
           </div>
          </a>
-
-          <div class="bb-hr py-2 px-3 d-flex justify-content-between">
-            <div class="d-flex gap-2 align-items-center ">
-              <img src="../../img/DollarCircle1.svg" alt="">
-              <p class="mobile-profile-font-2 mb-0">Pricing</p>
+         <a href="./pricingPayments.html" style="text-decoration: none;">
+           <div class="bb-hr py-2 px-3 d-flex justify-content-between">
+             <div class="d-flex gap-2 align-items-center ">
+               <img src="../../img/DollarCircle1.svg" alt="">
+               <p class="mobile-profile-font-2 mb-0">Pricing</p>
+              </div>
+              <img class="right-arrow" src="../../img/arrow_forward.svg" alt="">
             </div>
-            <img class="right-arrow" src="../../img/arrow_forward.svg" alt="">
-          </div>
-
-          <div class="bb-hr py-2 px-3 d-flex justify-content-between">
-            <div class="d-flex gap-2 align-items-center ">
-              <img src="../../img/Text Align Left.svg" alt="">
-              <p class="mobile-profile-font-2 mb-0">Rules and Policies</p>
+          </a>
+          <a href="./rulesAndPolicesMobile.html" style="text-decoration: none;">
+            <div class="bb-hr py-2 px-3 d-flex justify-content-between">
+              <div class="d-flex gap-2 align-items-center ">
+                <img src="../../img/Text Align Left.svg" alt="">
+                <p class="mobile-profile-font-2 mb-0">Rules and Policies</p>
+              </div>
+              <img class="right-arrow" src="../../img/arrow_forward.svg" alt="">
             </div>
-            <img class="right-arrow" src="../../img/arrow_forward.svg" alt="">
           </div>
-        </div>
+        </a>
 
 
         <div class="mt-2">
@@ -158,13 +162,15 @@
             <img class="right-arrow" src="../../img/arrow_forward.svg" alt="">
           </div>
 
-          <div class="bb-hr py-2 px-3 d-flex justify-content-between">
-            <div class="d-flex gap-2 align-items-center ">
-              <img src="../../img/Filter 5.svg" alt="">
-              <p class="mobile-profile-font-2 mb-0">Features and Amenities</p>
+          <a href="./myplace1submobile/FeaturesandAmenities.html" style="text-decoration: none;">
+            <div class="bb-hr py-2 px-3 d-flex justify-content-between">
+              <div class="d-flex gap-2 align-items-center">
+                <img src="../../img/Filter 5.svg" alt="">
+                <p class="mobile-profile-font-2 mb-0">Features and Amenities</p>
+              </div>
+              <img class="right-arrow" src="../../img/arrow_forward.svg" alt="">
             </div>
-            <img class="right-arrow" src="../../img/arrow_forward.svg" alt="">
-          </div>
+          </a>
 
           <button class="delete-listing">Delete listing</button>
         </div>
