--- a/dashBoard/mobile/pricingPayments.html
+++ b/dashBoard/mobile/pricingPayments.html
@@ -29,7 +29,11 @@
   <section class="mb-5">
     <section class=" mt-2">
       <div class="bb-hr dashboard-mobile-header">
-        <img src="../../img/arrow_back.svg" alt="">
+        <a href="./myListings.html" style="text-decoration: none; z-index: 1;">
+          <div>
+            <img src="../../img/arrow_back.svg" alt="">
+          </div>
+        </a>
         <p class="personalinfor-header-1" style="color: #090A0A; padding: 12px;">Pricing</p>
       </div>
 
