--- a/dashBoard/mobile/pricingsubmobile/FeesandTaxes.html
+++ b/dashBoard/mobile/pricingsubmobile/FeesandTaxes.html
@@ -53,8 +53,10 @@
 <body>
   <section class="mt-2" style="margin-bottom: 6rem !important;">
     <div class="dashboard-mobile-header">
-      <a href="../pricingmobile.html">
-        <img src="../../../img/arrow_back.svg" alt="">
+      <a href="../pricingPayments.html" style="text-decoration: none; z-index: 1;">
+        <div>
+          <img src="../../../img/arrow_back.svg" alt="">
+        </div>
       </a>
       <p class="personalinfor-header-1" style="color: #090A0A; padding: 12px;">Fees and Taxes</p>
     </div>
@@ -111,7 +113,7 @@
   <div class="d-flex flex-column gap-3">
     <div class="d-flex justify-content-between align-items-center">
       <p class="dashboard-font-23 mb-0">Crewdogs damage protection</p>
-      <p class="mb-0">Optional</p>
+      <p class="mb-0 dashboard-font-22" style="color:  #acacb0;" >Optional</p>
     </div>
     <p class="details-header-font-4 mb-0">$1 per day damage reimbursement up to $1,000</p>
     <div class="input-11">
