--- a/dashBoard/mobile/RulesAndPolicessubmobile/Cancellationpolicies.html
+++ b/dashBoard/mobile/RulesAndPolicessubmobile/Cancellationpolicies.html
@@ -54,8 +54,10 @@
 
   <section class=" mt-2">
     <div class="dashboard-mobile-header">
-      <a href="../rulesAndPolicesMobile.html" class="">
-        <img src="../../../img/arrow_back.svg" alt="">
+      <a href="../rulesAndPolicesMobile.html" style="text-decoration: none; z-index: 1;">
+        <div>
+          <img src="../../../img/arrow_back.svg" alt="">
+        </div>
       </a>
       <p class="personalinfor-header-1" style="color: #090A0A; padding: 12px;">Cancellation policies</p>
     </div>
