--- a/dashBoard/mobile/myplace1submobile/PropertyDetails.html
+++ b/dashBoard/mobile/myplace1submobile/PropertyDetails.html
@@ -45,8 +45,10 @@
   <section class="mb-5">
     <section class="mt-2">
       <div class="dashboard-mobile-header">
-        <a href="../myplacepage1.html" class="">
-          <img src="../../../img/arrow_back.svg" alt="">
+        <a href="../myListings.html" style="text-decoration: none; z-index: 1;">
+          <div>
+            <img src="../../../img/arrow_back.svg" alt="">
+          </div>
         </a>
         <p class="personalinfor-header-1" style="color: #090A0A; padding: 12px;">Listing name</p>
       </div>
