--- a/dashBoard/mobile/pricingsubmobile/OfficialTravelRates.html
+++ b/dashBoard/mobile/pricingsubmobile/OfficialTravelRates.html
@@ -78,10 +78,14 @@
 
 <body>
   <section class="mt-2">
-    <div class="dashboard-mobile-header">
+    <div class="dashboard-mobile-header px-3">
       <p class="personalinfor-header-1" style="justify-content: start; color: #090A0A; padding: 12px;">Available date
       </p>
-      <img src="../../../img/cross.png" alt="">
+      <a href="../pricingPayments.html" style="text-decoration: none; z-index: 1;">
+        <div>
+          <img src="../../../img/cross.png" alt="">
+        </div>
+      </a>
     </div>
     <div class="d-flex justify-content-evenly mx-auto mt-2"
       style="width: 80%; border-bottom: 1px solid var(--LIGHT-GRAY, #F1F1F1);">
