--- a/dashBoard/mobile/pricingsubmobile/standardrates.html
+++ b/dashBoard/mobile/pricingsubmobile/standardrates.html
@@ -47,8 +47,10 @@
 <body>
   <section class="mt-2">
     <div class="dashboard-mobile-header">
-      <a href="../pricingmobile.html">
-        <img src="../../../img/arrow_back.svg" alt="">
+      <a href="../pricingPayments.html" style="text-decoration: none; z-index: 1;">
+        <div>
+          <img src="../../../img/arrow_back.svg" alt="">
+        </div>
       </a>
       <p class="personalinfor-header-1" style="color: #090A0A; padding: 12px;">Rates</p>
     </div>
