--- a/dashBoard/photos.html
+++ b/dashBoard/photos.html
@@ -124,7 +124,13 @@
     </div>
   </div>
 
-  <hr>
+  <a href="./mobile/myListings.html" style="text-decoration: none; z-index: 1;">
+    <div>
+      <img src="../../img/arrow_back.svg" alt="">
+    </div>
+  </a>
+
+  <hr class="mobile-none">
 
   <div class="container " style="max-width: 1550px;">
     <div class="container d-flex justify-content-evenly align-items-start ">
@@ -156,19 +162,21 @@
       <div class="right-l-d">
      <div class="d-flex justify-content-between">
 
-       <p class="msg-side-font-9 mb-0" style="font-weight: 500;">Photos</p>
+       <p class="msg-side-font-9 mb-0 mobile-none" style="font-weight: 500;">Photos</p>
+       <p class="who-can-join mb-0 desktop-none" style=" font-size: 24px; font-weight: 500;">Edit pictures</p>
        <div class="plus-button">
         <div><svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12" fill="none">
           <path d="M0.666748 5.9974H11.3334M6.00008 11.3307V5.9974L6.00008 0.664062" stroke="#4B4B4D" stroke-linecap="round"/>
         </svg></div>
         <p class="msg-side-font-9 mb-0">
-          Add more photos
+          Add more <span class="mobile-none">photos</span> 
         </p>
        </div>
       </div>
 
         <div>
-          <p class="dashboard-font-14">Cover</p>
+          <p class="dashboard-font-14 mobile-none">Cover</p>
+          <p class="dashboard-font-14 desktop-none">Drag to reorder</p>
           <div class="cover-photo">
              <div class="edit-remove show-edit-remove">
                 <p class="mb-0 dashboard-font-21">Remove from cover</p>
@@ -279,22 +287,12 @@
              </div>
            </div>
 
-            <div class="cover-photo">
-              <div class="edit-remove ">
-                 <p class="mb-0 dashboard-font-21">Remove from cover</p>
-                 <p class="mb-0 dashboard-font-21" style="color: #FF554A;">Delete picture</p>
-              </div>
-             <div class="edit-remove-cover-photo">
-               <svg xmlns="http://www.w3.org/2000/svg" width="14" height="4" viewBox="0 0 14 4" fill="none">
-                 <path d="M2.99998 1.9974C2.99998 2.73378 2.40303 3.33073 1.66665 3.33073C0.930267 3.33073 0.333313 2.73378 0.333313 1.9974C0.333313 1.26102 0.930267 0.664062 1.66665 0.664062C2.40303 0.664062 2.99998 1.26102 2.99998 1.9974Z" fill="#444444"/>
-                 <path d="M8.33331 1.9974C8.33331 2.73378 7.73636 3.33073 6.99998 3.33073C6.2636 3.33073 5.66665 2.73378 5.66665 1.9974C5.66665 1.26102 6.2636 0.664062 6.99998 0.664062C7.73636 0.664062 8.33331 1.26102 8.33331 1.9974Z" fill="#444444"/>
-                 <path d="M13.6666 1.9974C13.6666 2.73378 13.0697 3.33073 12.3333 3.33073C11.5969 3.33073 11 2.73378 11 1.9974C11 1.26102 11.5969 0.664062 12.3333 0.664062C13.0697 0.664062 13.6666 1.26102 13.6666 1.9974Z" fill="#444444"/>
-               </svg>
-             </div>
-             <div class="cover-image">
-               <img src="../img/d-img2.jpg" alt="">
-             </div>
-           </div>
+
+           <div class="file-upload desktop-none flex-column gap-3" style="height: auto; margin-bottom: 0;">
+            <img src="../img/plus.png" alt="Upload Icon" class="icon">
+            <span class="file-name">Add Another</span>
+            <input type="file" id="imageUpload" name="imageUpload" accept="image/*">
+          </div>
 
 
           </div>
@@ -302,6 +300,8 @@
      
       </div>
     </div>
+    <br>
+    <br>
   </div>
 
 
