--- a/dashBoard/listingdetails.html
+++ b/dashBoard/listingdetails.html
@@ -162,9 +162,9 @@
               </div>
             </div>
             <div class="flex-c ">
-              <p>Bedrooms</p>
+              <p>Square ft</p>
              <div class="nput-ft">
-                <input class="" placeholder="24" type="text">
+                <input class="m-0" placeholder="24" type="text">
                 <p class="mb-0">ft</p>
              </div>
             </div>
