--- a/dashBoard/mobile/myListings.html
+++ b/dashBoard/mobile/myListings.html
@@ -153,14 +153,16 @@
               <img class="right-arrow" src="../../img/arrow_forward.svg" alt="">
             </div>
           </a>
-
-          <div class="bb-hr py-2 px-3 d-flex justify-content-between">
-            <div class="d-flex gap-2 align-items-center ">
-              <img src="../../img/Image.svg" alt="">
-              <p class="mobile-profile-font-2 mb-0">Pictures</p>
+          
+          <a href="../photos.html" style="text-decoration: none;">
+            <div class="bb-hr py-2 px-3 d-flex justify-content-between">
+              <div class="d-flex gap-2 align-items-center ">
+                <img src="../../img/Image.svg" alt="">
+                <p class="mobile-profile-font-2 mb-0">Pictures</p>
+              </div>
+              <img class="right-arrow" src="../../img/arrow_forward.svg" alt="">
             </div>
-            <img class="right-arrow" src="../../img/arrow_forward.svg" alt="">
-          </div>
+          </a>
 
           <a href="./myplace1submobile/FeaturesandAmenities.html" style="text-decoration: none;">
             <div class="bb-hr py-2 px-3 d-flex justify-content-between">
