--- a/dashBoard/mobile/myListings.html
+++ b/dashBoard/mobile/myListings.html
@@ -100,7 +100,7 @@
           </div>
         </a>
 
-         <a href="" style="text-decoration: none;" >
+         <a href="./myplacepage2.html" style="text-decoration: none;" >
           <div class="bb-hr py-2 px-3 d-flex justify-content-between">
             <div class="d-flex gap-2 align-items-center ">
               <img src="../../img/Calender 1.svg" alt="">
