--- a/dashBoard/mobile/myplacepage2.html
+++ b/dashBoard/mobile/myplacepage2.html
@@ -126,7 +126,7 @@
          <div style="display: block;">
         <div class="px-3 my-2 d-flex justify-content-between align-items-center py-1" style="background: #fafafa;">
           <p class="mobile-profile-font-1 mb-0">Availability</p>
-          <button class="synce-now-button"> <img src="../../img/Refresh 2.svg" alt=""> Sync Now</button>
+          <button class="synce-now-button" style="font-size: 14px;"> <img src="../../img/Refresh 2.svg" alt=""> Sync Now</button>
         </div>
         <div class="px-3 mt-2 d-flex justify-content-between">
           <p class="mb-0">Airbnb</p>
