--- a/dashBoard/mobile/pricingsubmobile/FeesandTaxes.html
+++ b/dashBoard/mobile/pricingsubmobile/FeesandTaxes.html
@@ -46,6 +46,7 @@
       justify-content: space-between;
       margin-bottom: .5rem;
     }
+    
 
   </style>
 </head>
@@ -80,14 +81,15 @@
     <p class="dashboard-font-23 mb-0">Taxes</p>
     <div class="fee-added-box">
       <div>
-        <p class="dashboard-font-10">Stay tax</p>
+        <p class="dashboard-font-10 mb-0">Stay tax</p>
         <p class="pi-font-6-1 mb-0">9% per stay</p>
       </div>
     <button class="edit-button pi-font-6-1" style="width: fit-content;">Edit</button>
     </div>
+    <hr>
     <div class="fee-added-box">
       <div>
-        <p class="dashboard-font-10">Local Tax</p>
+        <p class="dashboard-font-10 mb-0">Local Tax</p>
         <p class="pi-font-6-1 mb-0">5% per syay</p>
       </div>
     <button class="edit-button pi-font-6-1" style="width: fit-content;">Edit</button>
