--- a/dashBoard/listingdetails.html
+++ b/dashBoard/listingdetails.html
@@ -299,7 +299,7 @@
 
         <hr>
         <p class="dashboard-font-8">General features</p>
-        <div class="grid-d">
+        <div class="grid-d gap-0">
            <div class="choose-furniture">
             <p class="pi-font-5 mb-0">Furnished</p>
             <div class="flex-c-1">
