--- a/dashBoard/listingdetails.html
+++ b/dashBoard/listingdetails.html
@@ -15,7 +15,31 @@
   <link rel="stylesheet" href="../css/dashboard.css">
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-
+   <style>
+    .in-put{
+      position: relative;
+    }
+    .in-put a {
+      position: absolute; 
+      top: 1rem;
+      right: 1rem;
+    }
+ 
+    .in-put input {
+      margin: 0;
+      border: 1px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.8));
+      height: 60px;
+      background: #FCFCFC;
+      outline: none;
+      margin-bottom: 1rem;
+    }
+    .in-put input:focus{
+      background: #F7F7F7;
+    }
+    .in-put input:focus{
+      background: #F7F7F7;
+    }
+   </style>
 </head>
 
 <body>
@@ -81,22 +105,22 @@
         <p class="dashboard-font-6">Property information</p>
 
         <label for="Name " class="personalinfor-header-1" style="margin-bottom: 16px;">Name</label>
-        <div class="input-name in-put">
-          <input class="" style="border: none; outline: none; width: 93%;" type="text"
+        <div class="in-put">
+          <input class="" type="text"
             placeholder="A small room in denver">
           <a href="" class="edit-name">Edit</a>
         </div>
 
         <label for="Name " class="personalinfor-header-1" style="margin-bottom: 16px;">Listing nickname</label>
-        <div class="input-name in-put" >
-          <input class="" style="border: none; outline: none; width: 93%;" type="text"
+        <div class="in-put" >
+          <input type="text"
             placeholder="A small room in denver">
           <a href="" class="edit-name">Edit</a>
         </div>
 
         <label for="Name " class="personalinfor-header-1" style="margin-bottom: 16px;">Address</label>
-        <div class="input-name in-pute">
-          <input class="" style="border: none; outline: none; width: 93%;" type="text"
+        <div class="in-put">
+          <input  type="text"
             placeholder="A small room in denver">
           <a href="" class="edit-name">save</a>
         </div>
@@ -337,7 +361,6 @@
            </div>
 
 
-           
            <div class="choose-furniture">
             <p class="pi-font-5 mb-0">Furnished</p>
             <div class="flex-c-1">
