--- a/dashBoard/booking.html
+++ b/dashBoard/booking.html
@@ -27,11 +27,14 @@
 <div class="container mobile-margin-r-none" >
   
   <div id="dashboardHeader" style="z-index: 1; border-bottom:1px solid rgba(0, 0, 0, 0.085) ;"></div>
-  <a href="./mobile/myListings.html" class="container mt-3 desktop-none" style="text-decoration: none; z-index: 1;">
-    <div>
-      <img src="../../img/arrow_back.svg" alt="">
-    </div>
-  </a>
+  <div class="dashboard-mobile-header mt-3">
+    <a href="./mobile/myListings.html" style="text-decoration: none; z-index: 1;">
+      <div>
+        <img src="../../img/arrow_back.svg" alt="">
+      </div>
+    </a>
+    <p></p>
+  </div>
 
   <h1 class="offer-header-font-1 mt-2 container">Booking</h1>
   <br>
