--- a/header-home.html
+++ b/header-home.html
@@ -75,9 +75,12 @@
           </a>
 
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <label for="">1</label>
+            <li class="dropdown-item"><input type="radio"></li>
+            <label for="">2</label>
+            <li class="dropdown-item"><input type="radio"></li>
+            <label for="">3</label>
+            <li class="dropdown-item"><input type="radio"></li>
           </ul>
         </div>
 
@@ -88,9 +91,12 @@
           </a>
 
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <label for="">1</label>
+            <li class="dropdown-item"><input type="radio"></li>
+            <label for="">2</label>
+            <li class="dropdown-item"><input type="radio"></li>
+            <label for="">3</label>
+            <li class="dropdown-item"><input type="radio"></li>
           </ul>
         </div>
 
@@ -101,9 +107,12 @@
           </a>
 
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <label for="">1</label>
+            <li class="dropdown-item"><input type="radio"></li>
+            <label for="">2</label>
+            <li class="dropdown-item"><input type="radio"></li>
+            <label for="">3</label>
+            <li class="dropdown-item"><input type="radio"></li>
           </ul>
         </div>
 
