--- a/searchbarmain.html
+++ b/searchbarmain.html
@@ -32,8 +32,8 @@
                     <span> Choose a</span> date
                 </a>
 
-                <ul class="dropdown-menu">
-                    <li class="dropdown-item calander-main container p-2 border rounded"
+                <ul class="dropdown-menu p-0" style="overflow: hidden; margin: auto;">
+                    <li class="dropdown-item calander-main p-2"
                         style=" background-color: #fff ;">
                         <div class="w-100 d-flex flex-column" style="z-index: 999  !important;">
 
